<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">spend</string>

    <string name="drawer_records">records</string>
    <string name="drawer_sums">sums</string>
    <string name="drawer_about">about</string>


    <string name="fragment_title_records" translatable="false">@string/app_name</string>
    <string name="fragment_title_sums">sums</string>
    <string name="fragment_title_about">about</string>


    <string name="hint_category">category</string>
    <string name="hint_kind">kind</string>
    <string name="hint_value">value</string>
    <string name="hint_date">date</string>
    <string name="hint_time">time</string>

    <string name="dialog_title_delete_spend">delete spend?</string>
    <string name="dialog_title_delete_profit">delete profit?</string>
    <string name="dialog_title_edit_spend">edit spend</string>
    <string name="dialog_title_create_profit">create profit</string>
    <string name="dialog_title_create_spend">create spend</string>
    <string name="dialog_title_edit_profit">edit profit</string>
    <string name="dialog_title_choose_kind">select kind</string>
    <string name="dialog_title_choose_category">select category</string>
    <string name="dialog_title_combine_records">combine selected records?</string>
    <string name="dialog_title_delete_selected_records">delete selected records?</string>
    <string name="dialog_title_change_records">change selected records?</string>

    <string name="button_ok" tools:ignore="ButtonCase,Typos">ok</string>
    <string name="button_create">create</string>
    <string name="button_edit">edit</string>
    <string name="button_delete">delete</string>
    <string name="button_cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="button_combine">combine</string>
    <string name="button_change">change</string>

    <string name="list_loaded_completely">list loaded completely</string>
    <string name="send_title">send dump</string>
    <string name="not_deleted_records_hash">not deleted records hash</string>
    <string name="about_text">about</string>

    <string name="today_text">today</string>
    <string name="yesterday_text">yesterday</string>
    <string name="tomorrow_text">tomorrow</string>
    <string name="now_text">now</string>
    <string name="no_time_text">no&#9719;</string>

    <string name="app_info_text_format" formatted="true">
        <![CDATA[
        <b>spend</b> application<br/>
        <br/>
        developed by <b>Alexander Zhdanov</b><br/>
        https://github.com/qwert2603/spend_android<br/>
        telegram: <b>qwert2603</b><br/>
        https://vk.com/qwert2603<br/>
        <br/>
        version: <b>%1$s (%2$d)</b><br/>
        built: <b>%3$s</b> at <b>%4$s</b><br/>
        hash:<br/><b>%5$s</b><br/>
        ]]>
    </string>

    <string name="menu_item_show_change_kinds">change kinds</string>
    <string name="menu_item_show_spends">spends</string>
    <string name="menu_item_show_profits">profits</string>
    <string name="menu_item_show_sums_by_day">&#931; by days</string>
    <string name="menu_item_show_sums_by_month">&#931; by months</string>
    <string name="menu_item_show_sums_by_year">&#931; by years</string>
    <string name="menu_item_show_balances">balances</string>
    <string name="menu_item_new_profit">new profit</string>
    <string name="menu_item_show_times">times</string>
    <string name="menu_item_sort_by_value">sort by value</string>
    <string name="menu_item_filters">filters</string>
    <string name="menu_item_short_sum_format" formatted="true">short &#931;: %s</string>
    <string name="menu_item_long_sum_format" formatted="true">long &#931;: %s</string>
    <string name="title_long_sum_dialog">long &#931;</string>
    <string name="title_short_sum_dialog">short &#931;</string>
    <string name="text_period_sum_format" formatted="true" translatable="false">&#931;(%1$s) = %2$s</string>

    <string name="menu_item_delete">delete</string>
    <string name="menu_item_combine">combine</string>
    <string name="menu_item_change">change</string>

    <string name="text_all_records_loaded">&#8704; records loaded</string>

    <string name="text_total_items_format" formatted="true" translatable="false">&#931;(%s) = %s</string>
    <string name="text_total_sum_format" formatted="true" translatable="false">&#931;(&#8704;) = %s</string>

    <string name="menu_item_add_stub_records">250 stub records</string>
    <string name="menu_item_clear_all">clear all</string>

    <string name="text_source_code">source code</string>
    <string name="text_source_code_long">source code on github.com</string>

    <string name="record_kind_title_format" formatted="true" translatable="false"><![CDATA[<b>%s</b> (%s, &#931; = %s)]]></string>
    <string name="record_kind_description_format" formatted="true"><![CDATA[last: <b>%1$s</b> @ <b>%2$s</b> at <b>%3$s</b>]]></string>
    <string name="record_kind_description_no_time_format" formatted="true"><![CDATA[last: <b>%1$s</b> @ <b>%2$s</b>]]></string>
    <string name="record_kind_description_no_records"><![CDATA[<i>no records</i>]]></string>

    <string name="text_dumping_records">creating records list..</string>

    <string name="and_text">and</string>
    <string name="no_sum_text">no</string>
    <string name="comma_text" translatable="false">,</string>
    <string name="sum_equals" translatable="false">&#931; = </string>

    <string name="letter_days">d</string>
    <string name="letter_hours">h</string>
    <string name="letter_minutes">m</string>

    <string name="changes_count_format" formatted="true" translatable="false">%d&#916;</string>
    <string name="no_changes_text" translatable="false">&#8709;&#916;</string>
    <string name="text_show_deleted">deleted</string>

    <string name="variant_sum_format" formatted="true" translatable="false">&#931; = %s</string>
    <string name="text_variant_sum_loading" translatable="false">~</string>

    <string name="text_deleted_while_deleted_profit">deleting profit was deleted on server</string>
    <string name="text_deleted_while_edited_profit">editing profit was deleted on server</string>
    <string name="text_deleted_while_deleted_spend">deleting spend was deleted on server</string>
    <string name="text_deleted_while_edited_spend">editing spend was deleted on server</string>
    <string name="text_editing_record_not_found">record not found</string>
    <string name="text_deleting_record_not_found">record not found</string>
    <string name="text_record_was_deleted">record was deleted</string>

    <string name="server_change_category_format" formatted="true"><![CDATA[on server <b>category</b> changed to <b>%s</b>]]></string>
    <string name="server_change_kind_format" formatted="true"><![CDATA[on server <b>kind</b> changed to <b>%s</b>]]></string>
    <string name="server_change_value_format" formatted="true"><![CDATA[on server <b>value</b> changed to <b>%s</b>]]></string>
    <string name="server_change_date_format" formatted="true"><![CDATA[on server <b>date</b> changed to <b>%s</b>]]></string>
    <string name="server_change_time_format" formatted="true"><![CDATA[on server <b>time</b> changed to <b>%s</b>]]></string>

    <string name="button_accept">accept</string>
    <string name="text_loading">loading..</string>

    <string name="dont_change_text">don\'t change</string>
    <string name="text_all_selected_records_were_deleted">all selected records were deleted</string>
    <string name="hint_search">search</string>
    <string name="hint_start_date">start date</string>
    <string name="hint_end_date">end date</string>
    <string name="text_not_selected">not selected</string>

    <string name="notification_channel_sync_id" translatable="false">sync</string>
    <string name="notification_channel_sync_name">synchronization</string>
    <string name="notification_text_sync_done">sync done</string>
    <string name="notification_text_sync_error">sync error</string>

    <string name="old_records_lock_enable">Enable</string>
    <string name="old_records_lock_disable">Disable</string>
    <string name="old_records_lock_text_disabled">Editing old records disabled.</string>
    <string name="old_records_lock_text_enabled" formatted="true">Editing old records enabled. It will be disabled in %s.</string>

</resources>