<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/dialog_title_edit_spend" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:animateLayoutChanges="true"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_date"
                    android:longClickable="false"
                    android:singleLine="true"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time_TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/time_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_time"
                    android:longClickable="false"
                    android:singleLine="true"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputAutoCompleteTextView
                android:id="@+id/category_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_category"
                android:imeOptions="actionNext|flagNoFullscreen"
                android:inputType="textNoSuggestions"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputAutoCompleteTextView
                android:id="@+id/kind_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_kind"
                android:imeOptions="actionNext|flagNoFullscreen"
                android:inputType="textNoSuggestions"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_value"
                android:imeOptions="actionDone|flagNoFullscreen"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/category_Change"
            layout="@layout/include_server_change" />

        <include
            android:id="@+id/kind_Change"
            layout="@layout/include_server_change" />

        <include
            android:id="@+id/value_Change"
            layout="@layout/include_server_change" />

        <include
            android:id="@+id/date_Change"
            layout="@layout/include_server_change" />

        <include
            android:id="@+id/time_Change"
            layout="@layout/include_server_change" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>