<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/dialogChangeRecords_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_change_records"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_date"
                    android:longClickable="false"
                    android:singleLine="true"
                    tools:drawableRight="@drawable/ic_close_black_20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time_TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/time_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_time"
                    android:longClickable="false"
                    android:singleLine="true"
                    tools:drawableRight="@drawable/ic_close_black_20dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>